[Feature] add point event
now point should have an event to trigger point increase or deduction

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,8 @@
         "psr-4": {
             "Panigale\\Point\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
